spade-tests/src/snapshots/spade_tests__mod_namespacing__missing_mod_for_file.snap
---
source: spade-tests/src/mod_namespacing.rs
---
fn just_some_stuff() {}


error: Missing `mod subfile;` for src/subfile.spade
  ┌─ src/main.spade:1:1
  │
1 │ fn just_some_stuff() {}
  │ ^^^^^^^^^^^^^^^^^^^^^^^ Missing `mod subfile;`
  │
  = Consider adding `mod subfile;`
  │
1 │ mod subfile; fn just_some_stuff() {}
  │ +++++++++++++
